test/1.4/errors/T_ETYPE.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR ETYPE
extern undefined_type_t undef_ret();
/// ERROR ETYPE
extern void undef_arg(undefined_type_t);
/// ERROR ETYPE
extern undefined_type undef_val;
/// ERROR ETYPE
typedef undefined_type_t undef_ret();
/// ERROR ETYPE
extern typedef void undef_arg(undefined_type_t);
/// ERROR ETYPE
extern typedef undefined_type undef_val;
